fix navbar positioning z-index

--- a/public/stylesheets/partials/_layout.scss
+++ b/public/stylesheets/partials/_layout.scss
@@ -309,7 +309,7 @@ figure.card:nth-child(2) {
 }
 
 
-
+/*
 
 .grid-wrapper {
     display: grid;
@@ -332,6 +332,9 @@ figure.card:nth-child(2) {
         "footer footer";
     }
 }
+
+*/
+
 
 .grid-c {
   @include display-grid;
@@ -438,7 +441,7 @@ figure.card:nth-child(2) {
     grid-auto-flow: dense;
   }
 
-  .item {
+  .item--disabled {
     position: relative;
     display: flex;
     flex-direction: column;
