--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -40,7 +40,6 @@
 }
 
 .case-text-box {
-  width: 50%; 
   @include reset;
   background-color: $white;
 }
@@ -69,8 +68,6 @@
 }
 
 .case-meta {
-  width: 40vw;
-  height: 50vh;
   padding: 1em;
   background-color: $black;
   color: $white;
